wedding.css
@import url("https://fonts.googleapis.com/css2?family=Dancing+Script&family=Great+Vibes&family=Indie+Flower&family=Parisienne&family=Sacramento&family=Shadows+Into+Light&family=Pacifico&family=Courgette&display=swap");
@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@200&display=swap');
/* start universal style rules including the classes for title, subtitles and names */

body {
  margin: 0px;
  width: 100%;
  height: 100%;
}

* {
  margin: 0;
}

h1, h2, h3 {
    color: rgba(0, 128, 128, 1);

}

article {
  min-height: 100%;
  /* height: 100vh; */
  min-width: 100vw;
  /* padding:15px 9vw 0 9vw; */
  position: relative;
  overflow:hidden;
}

p {
  /* font-size:1rem; */
  font-family: 'Montserrat',cursive;
  margin-left: 15px;
  color: rgba(0, 128, 128, 1);
}

img {
  width: 100%;
  height: 100%;
  position: absolute;
  /* left:0; */
  z-index:-1;
  object-fit: cover;
}

h3 {
  margin-top: 10px;
  margin-bottom: 10px;
  margin-left: 5px;
}

.photo-overlay{
  width: 100%;
  height: 100%;
  background-color: rgba(223, 223, 223,.5);
  position: absolute;
  left: 0;
  z-index: -1;
}

.faq-question {
  margin-top: 5px;
  font-weight:  bold;
}

#left_date{
  transform-origin: 0 0 ;
  transform: rotate(270deg) translateX(-50%);
  position: fixed;
  /* left:0px; */
  top: 50%;
  font-size: 1.4rem;
  /* background-color:white; */
  padding: 5px 10px;
  border-radius: 0 0 10px 10px;
  z-index: 10;
  color: rgba(0, 128, 128, 1);
}

.title{
  display: block;
  font-size: 3rem;
  text-align: center;
  font-family: 'Parisienne',cursive;
  font-weight: 600;
  line-height: 3rem;
  margin-bottom: 2.5rem;
  padding-top: 1rem;
}

.sub-title{
  text-align: center;
  font-size: 2rem;
  font-family: 'Parisienne',cursive;
  margin: .6rem 0rem;
}

.name {
  font-size: 1.5rem;
  font-family: 'Sacramento';
  text-align: center;
  color: rgba(0, 128, 128, 1);
}

/* end universal style rules */
/* start the menu css */
#right_menu {
  /* width: 100vw; */
  height: 100vh;
  position: fixed;
  z-index: 2;
}

#menu-items {
  left: 0px;
  list-style-type: none;
  top: 0vh;
}

#menu-items li a {
  text-decoration: none;
  color:#efefef;
  font-family: 'Parisienne';
  font-size: 2rem;
}

#menu-items li {
  padding: 10px 0px;
}
.right-float {
  position: fixed;
  right: 0px;
  top: 40%;
  cursor: pointer;
}

.menu-list{
  position: fixed;
  right: 0px;
  height: 100vh;
  width: 55vw;
  background-color: rgba(0, 169, 165, .8);
  transform: translateX(65vw)
}

.open{
  transform: translateX(0);
}

.btn {
  transform: rotate(270deg) translateY(50%) translateX(-50%);
  padding: 10px 30px;
  border: none;
  border-radius: 10px 10px 0px 0px;
  background-color: rgba(0, 169, 165, .8);
  font-family: 'Parisienne';
  font-size: 1.5rem;
  color: #efefef;
}

.btn-open {
  transform: rotate(270deg) translateY(-53.2vw) translateX(-50%);
}
/* end the menu css */
/* style for the hero page of the site including the timer */

#grabber {
  font-weight: 900;
  font-size:2.75em;
  fill: #6942f5;
  text-align: center;
  background: rgba(255,255,255,0);
  margin: 10px;
  font-family: 'Great Vibes';
}
#bride{
  width:167px;
  border-radius: 25px 25px 0 0;
}
#groom{
  width:449px;
  border-radius: 25px;
}

#bride, #groom {
  color: rgba(0, 128, 128, 1);
  text-align: center;
  font-size: 2em;
  padding: 10px;
  font-family: 'Montserrat bold';
  font-weight: 900;
  background-color: lavender;
  display: block;
  margin:0 auto;

}

#bride {
  /* margin-left:44%; */
}

.bride-div{
  position: absolute;
  bottom: 2rem;
  left: 50vw;
  transform: translateX(-50%);
}

.groom-div {
  margin-bottom: 40px;
}

#couple {
  display:grid;
  grid-template-rows:max-content;
  grid-template-columns:1fr 1fr;
}

.center-text {
  /* padding:0rem .5rem; */
  color:white;
  padding-left: 2.4rem;
  padding-right: .5rem;
}

#timer {
  flex-direction: row;
  display: flex;
  bottom: 2rem;
  right: 15px;
  position: absolute;
  text-align: center;
}

#timer li {
  display: inline-block;
  /* position: absolute; */
  bottom: 0;
  /* color: white; */
  /* padding: 4rem; */
  color: rgba(0, 128, 128, 1);
  font-size: 1.5rem;
  background-color: lavender;
  font-weight: 900;
  height: 100px;
  padding: 0 1rem;
  margin-left: .5rem;
  border-radius: 25px;
}

#timer li div{
  margin: 0 auto;
}

#timer li span {
  display: block;
  margin-top:1rem;
}

/* end hero page styles */
/* layout style for the story page */

#meet-sub-title {
  grid-row: 1 / 2;
  grid-column: 1 / 3;
}

/*end story page layout */
/*styles for the wedding party page */
/* #wedding-party-title{
  padding-top:10px;
  margin-bottom:30px;
  line-height: 3rem;
} */

#party-list {
  display: grid;
  grid-template-columns: 1fr 1fr;
  grid-gap: 20px;
}

.party-title {
  margin-top: -.4rem;
  text-align: center;
  color: rgba(0, 128, 128, 1);
}

/* end style for wedding party */
/*style rules for the events page */

#schedule {
  display: grid;
  grid-template-columns: repeat(3,1fr);
  grid-gap: 20px;
  margin-left: 15px;
  justify-items: center;
}

#map-container {
  /* left: 0px; */
  margin-left: -38px;
}

.location {
  font-size:1.3em;
  text-align: center;
  font-family: 'Montserrat bold';
}

.schedule-data {
  font-family: 'Montserrat', cursive;
  color: rgba(0, 128, 128, 1);
}

#registry {
  font-family: 'Montserrat', cursive;
}

.registry {
  width: 92% !important;
}

.date {
  color: rgba(0, 128, 128, 1);
}

.accomodation-text {
  font-family: 'Montserrat';
  padding-bottom: 10px;
}

.zola-registry-iframe {
  margin-left: 15px;
  width: 92% !important;
}

iframe#map-container {
    width: 90%;
    padding-left: 10%;
}

iframe {
  width: 100%;
}

iframe body {
  background-color: red !important;
}
/* end event page style rules */

